# mpi_trace

./: .gitignore  CMakeLists.txt  LebedevQuad.cpp  LebedevQuad.h  MeshView.cpp  MeshView.h  aligntest.cu  array.h  config.h  gpu.cu  gpu.h  kernels.cu  kernels.h  main.cpp  mesh.geo  mesh_prepare.cpp  mhd.cpp  mhd.h  trace.cpp  trace.h  umfsolve.cpp  umfsolve.h
cmake/: FindMETIS.cmake  FindUmfpack.cmake
